Fixes bug: in the teammate drawer if the full name is too long it overlaps the email

--- a/src/app/components/sidebar-user-details/sidebar-user-details.component.scss
+++ b/src/app/components/sidebar-user-details/sidebar-user-details.component.scss
@@ -143,6 +143,10 @@ button.user-details-btn-close {
     font-family: "Poppins";
     font-weight: 500;
     line-height: 24px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 260px;
 }
 
 .user-details-email {
@@ -156,11 +160,15 @@ button.user-details-btn-close {
 .user-details-email > h3 {
     font-size: 14px;
     text-align: center;
-    margin-top: 5px;
+    margin-top: 1px;
     font-family: "Poppins";
     font-weight: 400;
-    line-height: 1px;
+    line-height: 19px;
     white-space: nowrap;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 260px;
 }
 
 .user-details-role {
